--- a/reshape_data.ipynb
+++ b/reshape_data.ipynb
@@ -2,34 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd, json, matplotlib.pyplot as plt\n",
+    "from pdb import set_trace\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data_by_sphere.csv  scenario.csv\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ls *.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,17 +40,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.sphere = df.sphere.apply(str.capitalize)\n",
-    "df.to_csv('data_by_sphere.csv')"
+    "sum_by_sphere = df.loc[df.year == 2012].groupby('sphere', as_index=False).k_t_ne.sum()\n",
+    "sum_by_sphere.columns = ['sphere', 'total_ktne']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.merge(sum_by_sphere, on='sphere', how='left')\n",
+    "df.sphere = df.sphere.apply(str.capitalize)\n",
+    "df.sphere = df.sphere.str.replace('Total', 'Всього')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.sort_values(['total_ktne', 'sphere', 'year', 'is_vde', 'k_t_ne'], ascending=[False, True, True, True, False]\n",
+    "              ).drop('total_ktne', axis=1\n",
+    "              ).to_csv('data_by_sphere.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,13 +108,449 @@
     "        'Заходи з енергоефективності та енергозаощадження',\n",
     "        'Термоізоляція приміщень',\n",
     "        'Використання високоефективних технічних приладів (А++, А+++)',\n",
+    "    ],\n",
+    "    'Всього': [\n",
+    "        'Економічні наслідки:',\n",
+    "        'Скорочення потреб в енергоресурсах на 42%',\n",
+    "        'Економія до 75% енергоресурсів для опалення завдяки повній реконструкції будинків',\n",
+    "        'Економія 30% коштів завдяки енергоефективності та енергозбереженню',\n",
+    "        'Енергоємність ВВП України знизиться у 3  рази',\n",
+    "        'Не потрібно імпортувати газ, вугілля, ядерне паливо',\n",
+    "        'Соціальні наслідки:',\n",
+    "        'Нова енергетична інфраструктура',\n",
+    "        'Нові робочі місця в галузі ВДЕ та енергоефективності',\n",
+    "        'Нові можливості для розвитку на місцях: локальне виробництво енергії, використання місцевих ресурсів',\n",
+    "        'Зменшення кількості працівників у видобувній галузі',\n",
+    "        'Скорочення викидів парникових газів 90 %  від рівня 1990 р.',\n",
+    "        'Зниження негативного впливу від енергетики на здоров’я людей',\n",
     "    ]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reshape_df(d):\n",
+    "    new = d.pivot('year', 'source', 'k_t_ne').reset_index()\n",
+    "    new['sphere'] = d.sphere.iloc[0]\n",
+    "    return new.reindex(['year', 'sphere', 'Біопаливо та відходи', 'Вугілля', 'Газ', 'Електроенергія',\n",
+    "       'Електроенергія з ВДЕ', 'Нафта та нафтопродукти', 'Сонячна енергія',\n",
+    "       'Теплова енергія', 'Теплова енергія з ВДЕ'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?pd.DataFrame.reset_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>source</th>\n",
+       "      <th>year</th>\n",
+       "      <th>sphere</th>\n",
+       "      <th>Біопаливо та відходи</th>\n",
+       "      <th>Вугілля</th>\n",
+       "      <th>Газ</th>\n",
+       "      <th>Електроенергія</th>\n",
+       "      <th>Електроенергія з ВДЕ</th>\n",
+       "      <th>Нафта та нафтопродукти</th>\n",
+       "      <th>Сонячна енергія</th>\n",
+       "      <th>Теплова енергія</th>\n",
+       "      <th>Теплова енергія з ВДЕ</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Всього</td>\n",
+       "      <td>1029.0</td>\n",
+       "      <td>9212.0</td>\n",
+       "      <td>21698.0</td>\n",
+       "      <td>11130.0</td>\n",
+       "      <td>710.0</td>\n",
+       "      <td>11347.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11853.0</td>\n",
+       "      <td>12.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Домогосподарства</td>\n",
+       "      <td>936.0</td>\n",
+       "      <td>715.0</td>\n",
+       "      <td>13760.0</td>\n",
+       "      <td>3105.0</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4677.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Промисловість</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>8310.0</td>\n",
+       "      <td>5272.0</td>\n",
+       "      <td>5102.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1246.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4538.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Сфера послуг</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>463.0</td>\n",
+       "      <td>1861.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2326.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Сільське господарство</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>312.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>1364.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>312.0</td>\n",
+       "      <td>0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Транспорт</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2050.0</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>8588.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Всього</td>\n",
+       "      <td>5695.0</td>\n",
+       "      <td>5419.0</td>\n",
+       "      <td>7615.0</td>\n",
+       "      <td>6457.0</td>\n",
+       "      <td>10964.0</td>\n",
+       "      <td>5873.0</td>\n",
+       "      <td>657.0</td>\n",
+       "      <td>6435.0</td>\n",
+       "      <td>3904.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Домогосподарства</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>395.0</td>\n",
+       "      <td>5450.0</td>\n",
+       "      <td>1325.0</td>\n",
+       "      <td>2251.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>642.0</td>\n",
+       "      <td>2867.0</td>\n",
+       "      <td>1739.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Промисловість</td>\n",
+       "      <td>478.0</td>\n",
+       "      <td>4910.0</td>\n",
+       "      <td>1552.0</td>\n",
+       "      <td>3374.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>676.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2090.0</td>\n",
+       "      <td>1268.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Сфера послуг</td>\n",
+       "      <td>440.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>295.0</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>1642.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1231.0</td>\n",
+       "      <td>747.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Сільське господарство</td>\n",
+       "      <td>1119.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>144.0</td>\n",
+       "      <td>245.0</td>\n",
+       "      <td>771.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2035</td>\n",
+       "      <td>Транспорт</td>\n",
+       "      <td>3521.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>214.0</td>\n",
+       "      <td>647.0</td>\n",
+       "      <td>1098.0</td>\n",
+       "      <td>4426.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>Всього</td>\n",
+       "      <td>7334.0</td>\n",
+       "      <td>621.0</td>\n",
+       "      <td>460.1</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>25292.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4316.0</td>\n",
+       "      <td>1604.0</td>\n",
+       "      <td>7446.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>Домогосподарства</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>403.0</td>\n",
+       "      <td>5309.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3304.0</td>\n",
+       "      <td>834.0</td>\n",
+       "      <td>3873.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>Промисловість</td>\n",
+       "      <td>1235.0</td>\n",
+       "      <td>547.0</td>\n",
+       "      <td>276.0</td>\n",
+       "      <td>983.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>503.0</td>\n",
+       "      <td>2335.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>Сфера послуг</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>184.0</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>3252.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1012.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>850.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>Сільське господарство</td>\n",
+       "      <td>2232.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>439.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>388.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2050</td>\n",
+       "      <td>Транспорт</td>\n",
+       "      <td>3787.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>254.0</td>\n",
+       "      <td>3346.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3346.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "source  year                 sphere  Біопаливо та відходи  Вугілля      Газ  \\\n",
+       "0       2012                 Всього                1029.0   9212.0  21698.0   \n",
+       "1       2012       Домогосподарства                 936.0    715.0  13760.0   \n",
+       "2       2012          Промисловість                  46.0   8310.0   5272.0   \n",
+       "3       2012           Сфера послуг                  27.0    161.0    463.0   \n",
+       "4       2012  Сільське господарство                  20.0     14.0    153.0   \n",
+       "5       2012              Транспорт                   0.0     12.0   2050.0   \n",
+       "6       2035                 Всього                5695.0   5419.0   7615.0   \n",
+       "7       2035       Домогосподарства                 137.0    395.0   5450.0   \n",
+       "8       2035          Промисловість                 478.0   4910.0   1552.0   \n",
+       "9       2035           Сфера послуг                 440.0    100.0    295.0   \n",
+       "10      2035  Сільське господарство                1119.0      2.0    104.0   \n",
+       "11      2035              Транспорт                3521.0     12.0    214.0   \n",
+       "12      2050                 Всього                7334.0    621.0    460.1   \n",
+       "13      2050       Домогосподарства                   0.0      0.0      0.0   \n",
+       "14      2050          Промисловість                1235.0    547.0    276.0   \n",
+       "15      2050           Сфера послуг                  80.0     74.0    184.0   \n",
+       "16      2050  Сільське господарство                2232.0      0.0      0.0   \n",
+       "17      2050              Транспорт                3787.0      0.0      0.1   \n",
+       "\n",
+       "source  Електроенергія  Електроенергія з ВДЕ  Нафта та нафтопродукти  \\\n",
+       "0              11130.0                 710.0                 11347.0   \n",
+       "1               3105.0                 198.0                    71.0   \n",
+       "2               5102.0                   0.0                  1246.0   \n",
+       "3               1861.0                 119.0                    78.0   \n",
+       "4                312.0                  20.0                  1364.0   \n",
+       "5                750.0                  48.0                  8588.0   \n",
+       "6               6457.0               10964.0                  5873.0   \n",
+       "7               1325.0                2251.0                     0.0   \n",
+       "8               3374.0                   0.0                   676.0   \n",
+       "9                967.0                1642.0                     0.0   \n",
+       "10               144.0                 245.0                   771.0   \n",
+       "11               647.0                1098.0                  4426.0   \n",
+       "12              1920.0               25292.0                     3.0   \n",
+       "13               403.0                5309.0                     0.0   \n",
+       "14               983.0                   0.0                     0.0   \n",
+       "15               247.0                3252.0                     0.0   \n",
+       "16                33.0                 439.0                     0.0   \n",
+       "17               254.0                3346.0                     3.0   \n",
+       "\n",
+       "source  Сонячна енергія  Теплова енергія  Теплова енергія з ВДЕ  \n",
+       "0                   0.0          11853.0                   12.3  \n",
+       "1                   0.0           4677.0                    5.0  \n",
+       "2                   0.0           4538.0                    5.0  \n",
+       "3                   0.0           2326.0                    2.0  \n",
+       "4                   0.0            312.0                    0.3  \n",
+       "5                   0.0              0.0                    0.0  \n",
+       "6                 657.0           6435.0                 3904.0  \n",
+       "7                 642.0           2867.0                 1739.0  \n",
+       "8                   0.0           2090.0                 1268.0  \n",
+       "9                  14.0           1231.0                  747.0  \n",
+       "10                  0.0            247.0                  150.0  \n",
+       "11                  0.0              0.0                    0.0  \n",
+       "12               4316.0           1604.0                 7446.0  \n",
+       "13               3304.0            834.0                 3873.0  \n",
+       "14                  0.0            503.0                 2335.0  \n",
+       "15               1012.0            183.0                  850.0  \n",
+       "16                  0.0             84.0                  388.0  \n",
+       "17               3346.0              0.0                    0.0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(['year', 'sphere'], as_index=False).apply(reshape_df).reset_index(drop=True).fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order = df[['source', 'is_vde']].drop_duplicates(\n",
+    "                               ).reset_index(\n",
+    "                               ).sort_values('index', ascending=False\n",
+    "                               ).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "order = dict(map(lambda v: (v[1], {'index': v[0], 'is_vde': bool(v[2])}), order.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('sources_order.json', 'w') as f:\n",
+    "    json.dump(order, f, allow_nan=False, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
