new data by costs

--- a/reshape_data.ipynb
+++ b/reshape_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,6 +1593,99 @@
     "with open('measures.json', 'w') as f:\n",
     "    json.dump(measures, f, allow_nan=False, ensure_ascii=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## new data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data_from_report.csv', sep='\\t')\n",
+    "df.columns = ['source', 'sphere', 'scenario', 'Y2012', 'Y2015', 'Y2020', 'Y2025', 'Y2030',\n",
+    "       'Y2035', 'Y2040', 'Y2045', 'Y2050']\n",
+    "df = pd.wide_to_long(df, stubnames='Y', i=['source', 'sphere', 'scenario'], j='year').reset_index()\n",
+    "df.columns = ['source', 'sphere', 'scenario', 'year', 'ktne']\n",
+    "\n",
+    "df = df.loc[df.source != 'Всього'].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "totals = df.loc[df.sphere == 'загалом'].copy()\n",
+    "df = df.loc[df.sphere != 'загалом'].copy()\n",
+    "\n",
+    "new_total = df.groupby(['source', 'scenario', 'year'], as_index=False).ktne.sum()\n",
+    "new_total['sphere'] = 'загалом'\n",
+    "df = pd.concat([df, new_total], ignore_index=True, sort=False)\n",
+    "# df.to_csv('data_report_longest.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### parse costs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('costs_to_parse.txt') as f:\n",
+    "    costs = f.read()\n",
+    "\n",
+    "costs = re.sub('\\s{2,}|\\s+(?<=\\d)|\\s+(?=\\d)', '\\n', costs)\n",
+    "\n",
+    "scens = re.split('\\s*-{3,}\\s*', costs)\n",
+    "\n",
+    "snames = ['Консервативний', 'Ліберальний', 'Революційний']\n",
+    "\n",
+    "sdfs = [];\n",
+    "\n",
+    "for i, s in enumerate(scens):\n",
+    "    sdf = pd.DataFrame(list(map(lambda r: r.strip().split('\\n'), re.findall('[^0-9]+[^А-яЄєЇїІіҐґ]+', s))))\n",
+    "    sdf['scenario'] = snames[i]\n",
+    "    sdfs.append(sdf)\n",
+    "    \n",
+    "sdf = pd.concat(sdfs, ignore_index=True, sort=False\n",
+    "       ).replace({'-': 0})\n",
+    "\n",
+    "sdf.columns = ['action', 'Y2012', 'Y2015', 'Y2020', 'Y2025', 'Y2030', 'Y2035', 'Y2040', 'Y2045', 'Y2050', 'scenario']\n",
+    "\n",
+    "sdf = pd.wide_to_long(sdf, stubnames='Y', i=['action', 'scenario',], j='year').reset_index()\n",
+    "\n",
+    "sdf.columns = ['action', 'scenario', 'year', 'm_euro']\n",
+    "# sdf.to_csv('costs.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
