--- a/reshape_data.ipynb
+++ b/reshape_data.ipynb
@@ -4196,6 +4196,318 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/costs.csv')\n",
+    "df = df.loc[(df.scenario != 'Ліберальний') & (df.year.isin([2015, 2050]))]\n",
+    "\n",
+    "new_actions = [\n",
+    "    'Вартість палива',\n",
+    "    'Капітальні інвестиції',\n",
+    "    'Капітальні інвестиції',\n",
+    "    'Капітальні інвестиції',\n",
+    "    'Витрати на транспортування, постачання та проміжні технології',\n",
+    "    'Експлуатаційні витрати',\n",
+    "    'Експлуатаційні витрати',\n",
+    "    'Субсидії («зелений» тариф)',\n",
+    "]\n",
+    "\n",
+    "new_actions = dict(zip(df.action.drop_duplicates().values, new_actions))\n",
+    "df.action = df.action.apply(lambda a: new_actions[a])\n",
+    "\n",
+    "df = df.groupby(['action', 'scenario', 'year',], as_index=False).m_euro.sum()\n",
+    "\n",
+    "# df.to_csv('data/costs_agg.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Вартість палива': 'Вартість палива',\n",
+       " 'Нові капітальні інвестиції в технології виробництва е/е та тепла': 'Капітальні інвестиції',\n",
+       " 'Нові капітальні інвестиції в технології кінцевого енергоспоживання': 'Капітальні інвестиції',\n",
+       " 'Нові капітальні інвестиції в проміжні технології': 'Капітальні інвестиції',\n",
+       " 'Витрати на транспортування, постачання та проміжні технології': 'Витрати на транспортування, постачання та проміжні технології',\n",
+       " 'Експлуатаційні витрати (технології виробництва е/е та тепла)': 'Експлуатаційні витрати',\n",
+       " 'Експлуатаційні витрати (технології кінцевого енергоспоживання)': 'Експлуатаційні витрати',\n",
+       " 'Субсидії («зелений» тариф)': 'Субсидії («зелений» тариф)'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['action', 'scenario', 'year', 'm_euro'], dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>action</th>\n",
+       "      <th>scenario</th>\n",
+       "      <th>year</th>\n",
+       "      <th>m_euro</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Вартість палива</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>13507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Вартість палива</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>20803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Вартість палива</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>13500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Вартість палива</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>4123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Витрати на транспортування, постачання та пром...</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Витрати на транспортування, постачання та пром...</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>10085</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Витрати на транспортування, постачання та пром...</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Витрати на транспортування, постачання та пром...</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>4798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Експлуатаційні витрати</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>4659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Експлуатаційні витрати</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>36497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Експлуатаційні витрати</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>4659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Експлуатаційні витрати</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>33236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Капітальні інвестиції</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Капітальні інвестиції</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>48137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Капітальні інвестиції</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Капітальні інвестиції</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>59423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Субсидії («зелений» тариф)</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Субсидії («зелений» тариф)</td>\n",
+       "      <td>Консервативний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Субсидії («зелений» тариф)</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Субсидії («зелений» тариф)</td>\n",
+       "      <td>Революційний</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               action        scenario  year  \\\n",
+       "0                                     Вартість палива  Консервативний  2015   \n",
+       "1                                     Вартість палива  Консервативний  2050   \n",
+       "2                                     Вартість палива    Революційний  2015   \n",
+       "3                                     Вартість палива    Революційний  2050   \n",
+       "4   Витрати на транспортування, постачання та пром...  Консервативний  2015   \n",
+       "5   Витрати на транспортування, постачання та пром...  Консервативний  2050   \n",
+       "6   Витрати на транспортування, постачання та пром...    Революційний  2015   \n",
+       "7   Витрати на транспортування, постачання та пром...    Революційний  2050   \n",
+       "8                              Експлуатаційні витрати  Консервативний  2015   \n",
+       "9                              Експлуатаційні витрати  Консервативний  2050   \n",
+       "10                             Експлуатаційні витрати    Революційний  2015   \n",
+       "11                             Експлуатаційні витрати    Революційний  2050   \n",
+       "12                              Капітальні інвестиції  Консервативний  2015   \n",
+       "13                              Капітальні інвестиції  Консервативний  2050   \n",
+       "14                              Капітальні інвестиції    Революційний  2015   \n",
+       "15                              Капітальні інвестиції    Революційний  2050   \n",
+       "16                         Субсидії («зелений» тариф)  Консервативний  2015   \n",
+       "17                         Субсидії («зелений» тариф)  Консервативний  2050   \n",
+       "18                         Субсидії («зелений» тариф)    Революційний  2015   \n",
+       "19                         Субсидії («зелений» тариф)    Революційний  2050   \n",
+       "\n",
+       "    m_euro  \n",
+       "0    13507  \n",
+       "1    20803  \n",
+       "2    13500  \n",
+       "3     4123  \n",
+       "4     1328  \n",
+       "5    10085  \n",
+       "6     1307  \n",
+       "7     4798  \n",
+       "8     4659  \n",
+       "9    36497  \n",
+       "10    4659  \n",
+       "11   33236  \n",
+       "12    3355  \n",
+       "13   48137  \n",
+       "14    3778  \n",
+       "15   59423  \n",
+       "16     286  \n",
+       "17       0  \n",
+       "18     286  \n",
+       "19       0  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
