--- a/reshape_data.ipynb
+++ b/reshape_data.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd, json, matplotlib.pyplot as plt\n",
+    "import pandas as pd, json, matplotlib.pyplot as plt, re\n",
     "from pdb import set_trace\n",
     "%matplotlib inline"
    ]
@@ -4189,26 +4189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/costs.csv')\n",
-    "df = df.loc[(df.scenario != 'Ліберальний') & (df.year.isin([2015, 2050]))]\n",
+    "df = df.loc[(df.scenario != 'Ліберальний')]\n",
     "\n",
     "new_actions = [\n",
     "    'Вартість палива',\n",
     "    'Капітальні інвестиції',\n",
     "    'Капітальні інвестиції',\n",
     "    'Капітальні інвестиції',\n",
-    "    'Витрати на транспортування, постачання та проміжні технології',\n",
+    "    'Транспортування, постачання та проміжні технології',\n",
     "    'Експлуатаційні витрати',\n",
     "    'Експлуатаційні витрати',\n",
     "    'Субсидії («зелений» тариф)',\n",
@@ -4219,15 +4212,39 @@
     "\n",
     "df = df.groupby(['action', 'scenario', 'year',], as_index=False).m_euro.sum()\n",
     "\n",
-    "# df.to_csv('data/costs_agg.csv', index=False)"
+    "# df.to_csv('data/costs_agg.csv', index=False)\n",
+    "\n",
+    "def groupcosts(d):\n",
+    "    res = d.pivot('scenario', 'year', 'm_euro')\n",
+    "    res['action'] = d.iloc[0, 0]\n",
+    "    return res\n",
+    "\n",
+    "df.groupby(['action', 'scenario',], as_index=False\n",
+    "          ).apply(groupcosts\n",
+    "          ).reset_index(1\n",
+    "          ).drop(2012, axis=1\n",
+    "          ).to_csv('data/costs_agg_wide.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('енергоспоживання')"
+   ]
   },
   {
    "cell_type": "code",
@@ -4507,6 +4524,510 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## eresources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('data/eresources.xlsx', header=1).reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = [f'y{v}' if re.match('\\d{4}', str(v)) else 'source' for v in df.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>source</th>\n",
+       "      <th>year</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Вугілля</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>50182.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Газ</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>41993.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Нафта</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>13409.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ресурс для АЕС</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>23653.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Гідро</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>901.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Вітер</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>25.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Сонце</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>28.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Біопаливо та відходи</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>1566.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Імпорт елеткроенергії</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>8.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Всього</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>131765.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Вугілля</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>27363.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Газ</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>28102.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Нафта</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>10743.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Ресурс для АЕС</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>22985.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Гідро</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>464.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Вітер</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>94.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Сонце</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>40.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Біопаливо та відходи</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2636.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Імпорт елеткроенергії</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>193.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Всього</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>92620.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Вугілля</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>35772.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Газ</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>33355.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Нафта</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>12482.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Ресурс для АЕС</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>16952.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Гідро</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>905.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Вітер</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>772.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Сонце</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>252.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Біопаливо та відходи</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>6247.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Імпорт елеткроенергії</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>206.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Всього</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>106943.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Вугілля</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>27058.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>Газ</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>19196.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>Нафта</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>5323.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>Ресурс для АЕС</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>21.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Гідро</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>1110.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>Вітер</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>10058.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>Сонце</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>4881.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Біопаливо та відходи</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>16321.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>Імпорт елеткроенергії</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>Всього</td>\n",
+       "      <td>2040</td>\n",
+       "      <td>83970.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Вугілля</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>24248.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Газ</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>15564.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>Нафта</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>2909.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>Ресурс для АЕС</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>Гідро</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>1111.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>Вітер</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>11282.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>Сонце</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>7332.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>Біопаливо та відходи</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>18032.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>Імпорт елеткроенергії</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Всього</td>\n",
+       "      <td>2045</td>\n",
+       "      <td>80480.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>Вугілля</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>3705.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>Газ</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>12261.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>Нафта</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>1268.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>Ресурс для АЕС</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>Гідро</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>1114.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>Вітер</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>13996.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>Сонце</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>11342.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>Біопаливо та відходи</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>24734.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>Імпорт елеткроенергії</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>Всього</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>68422.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   source  year          y\n",
+       "0                 Вугілля  2012   50182.00\n",
+       "1                     Газ  2012   41993.00\n",
+       "2                   Нафта  2012   13409.00\n",
+       "3          Ресурс для АЕС  2012   23653.00\n",
+       "4                   Гідро  2012     901.00\n",
+       "5                   Вітер  2012      25.00\n",
+       "6                  Сонце   2012      28.00\n",
+       "7    Біопаливо та відходи  2012    1566.00\n",
+       "8   Імпорт елеткроенергії  2012       8.00\n",
+       "9                  Всього  2012  131765.00\n",
+       "10                Вугілля  2015   27363.00\n",
+       "11                    Газ  2015   28102.00\n",
+       "12                  Нафта  2015   10743.00\n",
+       "13         Ресурс для АЕС  2015   22985.00\n",
+       "14                  Гідро  2015     464.00\n",
+       "15                  Вітер  2015      94.00\n",
+       "16                 Сонце   2015      40.00\n",
+       "17   Біопаливо та відходи  2015    2636.00\n",
+       "18  Імпорт елеткроенергії  2015     193.00\n",
+       "19                 Всього  2015   92620.00\n",
+       "20                Вугілля  2020   35772.00\n",
+       "21                    Газ  2020   33355.00\n",
+       "22                  Нафта  2020   12482.00\n",
+       "23         Ресурс для АЕС  2020   16952.00\n",
+       "24                  Гідро  2020     905.00\n",
+       "25                  Вітер  2020     772.00\n",
+       "26                 Сонце   2020     252.00\n",
+       "27   Біопаливо та відходи  2020    6247.30\n",
+       "28  Імпорт елеткроенергії  2020     206.00\n",
+       "29                 Всього  2020  106943.30\n",
+       "..                    ...   ...        ...\n",
+       "60                Вугілля  2040   27058.00\n",
+       "61                    Газ  2040   19196.00\n",
+       "62                  Нафта  2040    5323.00\n",
+       "63         Ресурс для АЕС  2040      21.00\n",
+       "64                  Гідро  2040    1110.00\n",
+       "65                  Вітер  2040   10058.00\n",
+       "66                 Сонце   2040    4881.00\n",
+       "67   Біопаливо та відходи  2040   16321.10\n",
+       "68  Імпорт елеткроенергії  2040       2.00\n",
+       "69                 Всього  2040   83970.10\n",
+       "70                Вугілля  2045   24248.00\n",
+       "71                    Газ  2045   15564.00\n",
+       "72                  Нафта  2045    2909.00\n",
+       "73         Ресурс для АЕС  2045       0.00\n",
+       "74                  Гідро  2045    1111.00\n",
+       "75                  Вітер  2045   11282.00\n",
+       "76                 Сонце   2045    7332.00\n",
+       "77   Біопаливо та відходи  2045   18032.03\n",
+       "78  Імпорт елеткроенергії  2045       2.00\n",
+       "79                 Всього  2045   80480.03\n",
+       "80                Вугілля  2050    3705.00\n",
+       "81                    Газ  2050   12261.00\n",
+       "82                  Нафта  2050    1268.00\n",
+       "83         Ресурс для АЕС  2050       0.00\n",
+       "84                  Гідро  2050    1114.00\n",
+       "85                  Вітер  2050   13996.00\n",
+       "86                 Сонце   2050   11342.00\n",
+       "87   Біопаливо та відходи  2050   24734.00\n",
+       "88  Імпорт елеткроенергії  2050       2.00\n",
+       "89                 Всього  2050   68422.00\n",
+       "\n",
+       "[90 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.wide_to_long(df, 'y', i='source', j='year').reset_index()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -4530,7 +5051,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   },
   "toc": {
    "nav_menu": {},
